external-crates/move/crates/move-compiler/tests/move_check/parser/ability_modifier_infix_and_postfix.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01003]: invalid modifier
  ┌─ tests/move_check/parser/ability_modifier_infix_and_postfix.move:5:34
  │
5 │     struct Foo has copy, drop {} has store;
  │                ---               ^^^ Duplicate ability declaration. Abilities can be declared before or after the field declarations, but not both.
  │                │                  
  │                Ability declaration previously given here

error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/parser/ability_modifier_infix_and_postfix.move:5:34
  │
5 │     struct Foo has copy, drop {} has store;
  │                                  ^^^ Postfix abilities are not supported by current edition 'legacy'; the '2024' edition supports this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.
